[gd_scene load_steps=9 format=3 uid="uid://bej3jghjd60w2"]

[ext_resource type="Texture2D" uid="uid://dkqvah1pes3v6" path="res://icon.svg" id="1_psshm"]
[ext_resource type="Script" path="res://Scripts/Zombie.gd" id="1_vebhm"]
[ext_resource type="Script" path="res://Scripts/StateMachine.gd" id="2_vw3xb"]
[ext_resource type="Script" path="res://Scripts/States/ZombieChase.gd" id="4_gp210"]
[ext_resource type="Script" path="res://Scripts/States/ZombiePatrol.gd" id="5_m6wvp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t5iyu"]
radius = 63.0
height = 186.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4gkvs"]
radius = 905.108

[sub_resource type="CircleShape2D" id="CircleShape2D_rrx4k"]
radius = 1345.15

[node name="Zombie" type="CharacterBody2D"]
modulate = Color(0, 0.510407, 0.245851, 1)
collision_layer = 2
collision_mask = 23
script = ExtResource("1_vebhm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -0.500012)
scale = Vector2(1, 1.44531)
texture = ExtResource("1_psshm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_t5iyu")

[node name="SightArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightArea2D"]
shape = SubResource("CircleShape2D_4gkvs")

[node name="ChaseArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea2D"]
shape = SubResource("CircleShape2D_rrx4k")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_vw3xb")
initial_state = NodePath("ZombiePatrol")

[node name="ZombieChase" type="Node" parent="StateMachine"]
script = ExtResource("4_gp210")

[node name="ZombiePatrol" type="Node" parent="StateMachine"]
script = ExtResource("5_m6wvp")

[node name="PatrolTimer" type="Timer" parent="."]

[connection signal="body_entered" from="SightArea2D" to="StateMachine/ZombiePatrol" method="_on_sight_area_2d_body_entered"]
[connection signal="body_exited" from="ChaseArea2D" to="StateMachine/ZombieChase" method="_on_chase_area_2d_body_exited"]
[connection signal="timeout" from="PatrolTimer" to="StateMachine/ZombiePatrol" method="_on_patrol_timer_timeout"]
